packages/rosbag_deck_ffi/src/sys.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Reader {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2TopicInfo {
    pub name: *mut ::core::ffi::c_char,
    pub type_name: *mut ::core::ffi::c_char,
    pub serialization_format: *mut ::core::ffi::c_char,
    pub message_count: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Rosbag2TopicInfo"][::core::mem::size_of::<Rosbag2TopicInfo>() - 32usize];
    ["Alignment of Rosbag2TopicInfo"][::core::mem::align_of::<Rosbag2TopicInfo>() - 8usize];
    ["Offset of field: Rosbag2TopicInfo::name"]
        [::core::mem::offset_of!(Rosbag2TopicInfo, name) - 0usize];
    ["Offset of field: Rosbag2TopicInfo::type_name"]
        [::core::mem::offset_of!(Rosbag2TopicInfo, type_name) - 8usize];
    ["Offset of field: Rosbag2TopicInfo::serialization_format"]
        [::core::mem::offset_of!(Rosbag2TopicInfo, serialization_format) - 16usize];
    ["Offset of field: Rosbag2TopicInfo::message_count"]
        [::core::mem::offset_of!(Rosbag2TopicInfo, message_count) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Metadata {
    pub topics: *mut Rosbag2TopicInfo,
    pub topic_count: usize,
    pub message_count: u64,
    pub duration_ns: i64,
    pub start_time_ns: i64,
    pub end_time_ns: i64,
    pub storage_identifier: *mut ::core::ffi::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Rosbag2Metadata"][::core::mem::size_of::<Rosbag2Metadata>() - 56usize];
    ["Alignment of Rosbag2Metadata"][::core::mem::align_of::<Rosbag2Metadata>() - 8usize];
    ["Offset of field: Rosbag2Metadata::topics"]
        [::core::mem::offset_of!(Rosbag2Metadata, topics) - 0usize];
    ["Offset of field: Rosbag2Metadata::topic_count"]
        [::core::mem::offset_of!(Rosbag2Metadata, topic_count) - 8usize];
    ["Offset of field: Rosbag2Metadata::message_count"]
        [::core::mem::offset_of!(Rosbag2Metadata, message_count) - 16usize];
    ["Offset of field: Rosbag2Metadata::duration_ns"]
        [::core::mem::offset_of!(Rosbag2Metadata, duration_ns) - 24usize];
    ["Offset of field: Rosbag2Metadata::start_time_ns"]
        [::core::mem::offset_of!(Rosbag2Metadata, start_time_ns) - 32usize];
    ["Offset of field: Rosbag2Metadata::end_time_ns"]
        [::core::mem::offset_of!(Rosbag2Metadata, end_time_ns) - 40usize];
    ["Offset of field: Rosbag2Metadata::storage_identifier"]
        [::core::mem::offset_of!(Rosbag2Metadata, storage_identifier) - 48usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Message {
    pub timestamp_ns: i64,
    pub topic: *mut ::core::ffi::c_char,
    pub data: *mut u8,
    pub data_len: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Rosbag2Message"][::core::mem::size_of::<Rosbag2Message>() - 32usize];
    ["Alignment of Rosbag2Message"][::core::mem::align_of::<Rosbag2Message>() - 8usize];
    ["Offset of field: Rosbag2Message::timestamp_ns"]
        [::core::mem::offset_of!(Rosbag2Message, timestamp_ns) - 0usize];
    ["Offset of field: Rosbag2Message::topic"]
        [::core::mem::offset_of!(Rosbag2Message, topic) - 8usize];
    ["Offset of field: Rosbag2Message::data"]
        [::core::mem::offset_of!(Rosbag2Message, data) - 16usize];
    ["Offset of field: Rosbag2Message::data_len"]
        [::core::mem::offset_of!(Rosbag2Message, data_len) - 24usize];
};
unsafe extern "C" {
    pub fn rosbag2_reader_open(
        uri: *const ::core::ffi::c_char,
        storage_id: *const ::core::ffi::c_char,
    ) -> *mut Rosbag2Reader;
}
unsafe extern "C" {
    pub fn rosbag2_reader_close(reader: *mut Rosbag2Reader);
}
unsafe extern "C" {
    pub fn rosbag2_reader_has_next(reader: *const Rosbag2Reader) -> bool;
}
unsafe extern "C" {
    pub fn rosbag2_reader_read_next(
        reader: *mut Rosbag2Reader,
        msg_out: *mut Rosbag2Message,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_message_free(msg: *mut Rosbag2Message);
}
unsafe extern "C" {
    pub fn rosbag2_reader_seek(reader: *mut Rosbag2Reader, timestamp_ns: i64)
        -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_reader_get_metadata(
        reader: *const Rosbag2Reader,
        meta_out: *mut Rosbag2Metadata,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_metadata_free(meta: *mut Rosbag2Metadata);
}
unsafe extern "C" {
    pub fn rosbag2_reader_set_filter(
        reader: *mut Rosbag2Reader,
        topics: *const *const ::core::ffi::c_char,
        topic_count: usize,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_reader_reset_filter(reader: *mut Rosbag2Reader) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Writer {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn rosbag2_writer_open(
        uri: *const ::core::ffi::c_char,
        storage_id: *const ::core::ffi::c_char,
    ) -> *mut Rosbag2Writer;
}
unsafe extern "C" {
    pub fn rosbag2_writer_close(writer: *mut Rosbag2Writer);
}
unsafe extern "C" {
    pub fn rosbag2_writer_create_topic(
        writer: *mut Rosbag2Writer,
        name: *const ::core::ffi::c_char,
        type_name: *const ::core::ffi::c_char,
        serialization_format: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_writer_write(
        writer: *mut Rosbag2Writer,
        topic: *const ::core::ffi::c_char,
        timestamp_ns: i64,
        data: *const u8,
        data_len: usize,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn rosbag2_type_has_header_first(
        type_name: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}

// --- ROS 2 Node / Publisher API ---

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Node {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rosbag2Publisher {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn rosbag2_node_create(node_name: *const ::core::ffi::c_char) -> *mut Rosbag2Node;
}
unsafe extern "C" {
    pub fn rosbag2_node_destroy(node: *mut Rosbag2Node);
}
unsafe extern "C" {
    pub fn rosbag2_node_spin_some(node: *mut Rosbag2Node);
}
unsafe extern "C" {
    pub fn rosbag2_node_create_publisher(
        node: *mut Rosbag2Node,
        topic: *const ::core::ffi::c_char,
        type_name: *const ::core::ffi::c_char,
        qos_depth: usize,
        reliable: bool,
    ) -> *mut Rosbag2Publisher;
}
unsafe extern "C" {
    pub fn rosbag2_node_destroy_publisher(pub_handle: *mut Rosbag2Publisher);
}
unsafe extern "C" {
    pub fn rosbag2_node_publish(
        pub_handle: *mut Rosbag2Publisher,
        data: *const u8,
        data_len: usize,
    ) -> ::core::ffi::c_int;
}

unsafe extern "C" {
    pub fn rosbag2_last_error() -> *const ::core::ffi::c_char;
}
